# crawler

./: CLAUDE.md  README.md  build.sh  crawler  main.c  main_optimized.c
examples/: README.md  go_dependencies.json  java_class_diagram.mmd  js_example_analysis.md  python_dependencies.dot  rust_example_analysis.md
src/: analyzers.c  analyzers.h  config.h  crawler.c  crawler.h  dependency.c  dependency.h  file_cache.c  file_cache.h  grammars.c  grammars.h  hash_table.c  hash_table.h  incremental_analyzer.c  incremental_analyzer.h  language_analyzers.c  language_analyzers.h  logger.c  logger.h  memory_pool.c  memory_pool.h  method.c  method.h  output_formatter.c  output_formatter.h  parallel_processor.h  pattern_cache.c  pattern_cache.h  patterns.h  structure.c  structure.h  syntax_map.c  syntax_map.h  syntaxes.c  syntaxes.h
tests/c/: Makefile
tests/c/include/: application.h
tests/c/src/: main.c
tests/go/: go.mod  main.go
tests/go/internal/services/: user_service.go
tests/java/: pom.xml
tests/java/src/main/java/com/crawler/test/: CrawlerTestApplication.java
tests/js/: index.js  package.json
tests/js/middleware/: AuthMiddleware.js
tests/js/models/: User.js
tests/js/services/: UserService.js
tests/php/: composer.json
tests/php/src/: Application.php
tests/py/: main.py
tests/py/models/: user.py
tests/ruby/: Gemfile
tests/ruby/app/: application.rb
tests/rust/: Cargo.toml
tests/rust/src/: lib.rs  main.rs
tests/rust/src/models/: mod.rs  user.rs
